fixed column data alignment of airport table

--- a/src/views/afterAuth/globalMasters/components/airportTable/airportTable.scss
+++ b/src/views/afterAuth/globalMasters/components/airportTable/airportTable.scss
@@ -48,4 +48,10 @@
 			height: 4.4rem;
 		}
 	}
-       
+
+	.centered-content {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+	}      
